[gd_scene load_steps=12 format=3 uid="uid://bk71py2ijg52j"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_ntk2t"]
[ext_resource type="Texture2D" uid="uid://ba1hdndsq8wp1" path="res://Modules/Assets/testArt/DogBalloonMainMenuScene_scaled_3x.png" id="2_fukpt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yiqy"]

[sub_resource type="SystemFont" id="SystemFont_5yr6k"]
font_names = PackedStringArray("Silkscreen")

[sub_resource type="Theme" id="Theme_v6u2g"]
default_font = SubResource("SystemFont_5yr6k")
default_font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbhx6"]
bg_color = Color(0.952941, 0.92549, 0.831373, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.615686, 0.556863, 0.368627, 1)

[sub_resource type="SystemFont" id="SystemFont_bg3l1"]
font_names = PackedStringArray("Ink Free")

[sub_resource type="Theme" id="Theme_3eevr"]
default_font = SubResource("SystemFont_bg3l1")
default_font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07uxm"]
bg_color = Color(0.615686, 0.556863, 0.368627, 1)
border_width_left = 7
border_color = Color(0.192157, 0.45098, 0.4, 1)
corner_radius_top_right = 6
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqa0a"]
bg_color = Color(0.615686, 0.556863, 0.368627, 1)
border_width_left = 14
border_color = Color(0.439216, 0.192157, 0.45098, 1)
corner_radius_top_right = 6
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 10.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfxfa"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 14
corner_radius_top_right = 6
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 10.0
expand_margin_bottom = 2.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntk2t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(240, 135)
texture = ExtResource("2_fukpt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 210

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxEmpty_5yiqy")

[node name="GameName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_v6u2g")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.952941, 0.92549, 0.831373, 1)
theme_override_colors/font_outline_color = Color(0.615686, 0.556863, 0.368627, 1)
theme_override_constants/outline_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tbhx6")
text = "Game Name Here"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_5yiqy")

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_3eevr")
theme_override_styles/normal = SubResource("StyleBoxFlat_07uxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_fqa0a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gfxfa")
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_3eevr")
theme_override_styles/normal = SubResource("StyleBoxFlat_07uxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_fqa0a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gfxfa")
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_3eevr")
theme_override_styles/normal = SubResource("StyleBoxFlat_07uxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_fqa0a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gfxfa")
text = "Exit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
